# team-SAMv3-impact

./: .env.example  .env.local  .gitignore  DOCS.md  README.md  SAM3_README.md  environment.yml  pyproject.toml  setup.sh
examples/: _data.py  demo_api.py  demo_api_predict.py  demo_medsam3_eval.py  demo_medsam3_inf.py  demo_medsam3_train.py  demo_sam3_inf.py  demo_sam3_train.py  demo_sam3_unet_cascade.py  test_api.py  test_eval.py  test_inf.py  test_medsam3_eval.py  test_medsam3_inf.py  test_sam3_inf.py  test_sam3_train.py  test_train.py
src/impact_team_2/: __init__.py  __main__.py  api.py
src/impact_team_2/inference/: __init__.py  _inference_medsam3.py  _inference_sam3.py  inference_medsam3.py
src/impact_team_2/train/: __init__.py  data.py  med_sam.py  sam.py
src/impact_team_2/visual/: __init__.py  overlays.py  plot.py  utils.py
