[project]
name = "impact-team-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Blake Moody", email = "32070003+blayyyyyk@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "torchmetrics>=1.9.0",
    "python-dotenv>=1.0.0",
    "torchvision>=0.26.0",
    "tensorboard",
    "sam3-lora @ git+https://github.com/Joey-S-Liu/MedSAM3.git",
    "einops",
    "pycocotools",
    "psutil",
    "scikit-learn",
    "matplotlib",
    "pyyaml"
]

[project.optional-dependencies]
# Vendor UNet bbox generator (INIA) — only needed for the SAM3 auto-bbox path
# (examples/test_sam3_inf.py and api.predict with unet_weights set).
# tensorflow-metal is Apple-Silicon only; install it manually if you need it.
unet = [
    "tensorflow",
    "keras-unet-collection",
]

[project.scripts]
impact-team-2 = "impact_team_2:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
