[project]
name = "impact-team-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Blake Moody", email = "32070003+blayyyyyk@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    # Pinned to torch 2.7.x: MedSAM3 requires >=2.7, and 2.8+ starts pulling
    # in partial cu13 NVIDIA wheels that conflict with our cu12 stack.
    "torch>=2.7,<2.8",
    "transformers>=5.0,<6",
    "torchmetrics>=1.5",
    "python-dotenv>=1.0.0",
    "torchvision>=0.22,<0.23",
    "tensorboard",
    # Pinned to a specific commit so upstream changes (e.g. torch version bumps)
    # can't silently break our install. Bump this SHA to pick up new MedSAM3 work.
    "sam3-lora @ git+https://github.com/Joey-S-Liu/MedSAM3.git@f79eef3f4ccf",
    "einops",
    "pycocotools",
    "psutil",
    "scikit-learn",
    "matplotlib",
    "pyyaml"
]

[project.optional-dependencies]
# Vendor UNet bbox generator (INIA) — only needed for the SAM3 auto-bbox path
# (examples/test_sam3_inf.py and api.predict with unet_weights set).
# tensorflow-metal is Apple-Silicon only; install it manually if you need it.
unet = [
    "tensorflow",
    "keras-unet-collection",
]

[project.scripts]
impact-team-2 = "impact_team_2:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
